--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>$Title$</title>
 </head>
 <body>
-<button type="button" onclick="showMessage();">Click me</button>
-<scipt src="index.js">
-
-</scipt>
+$END$
 </body>
 </html>
