--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<ul>
+    <li>Họ và tên</li>
+    <li>Địa chỉ</li>
+    <li>Số điênh thoại</li>
+    <li>Số điện thoại</li>
+    <li>Email</li>
+    <li>Ảnh</li>
+    <li>Học vấn</li>
+    <li>Bằng cấp</li>
+    <li>Kỹ năng</li>
+    <li>Kinh nghiệm</li>
+</ul>
 </body>
 </html>
